        PR middle-end/38250         * tree-loop-distribution.c (build_size_arg): New function.         (generate_memset_zero): Checks if DR_STEP(de) is NULL.         Reorganized generating of stmts.         * testsuite/gcc.dg/tree-ssa/pr38250.c: New file.         * tree-data-ref.c (dr_analyze_innermost): Returns bool.         Indicate if analysis succeed.         * tree-data-ref.h (dr_analyze_innermost): Returns bool.         * tree-predcom.c (valid_initializer_p, find_looparound_phi):         Uses new definition of dr_analyze_innermost.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@142394 138bc75d-0d04-0410-961f-82ee72b054a4